[package]
name = "tremor"
version = "1.0.1"
description = "Force-feedback device control utility"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/tremor"
rust-version = "1.82.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
argh = "0.1.12"
libc = "0.2.151"
nix = { version = "0.30.1", features = ["ioctl"] }

[profile.release]
lto = "fat"
panic = "abort"
strip = true
